# Coloquinte_placement

./: CMakeLists.txt  INSTALL  LICENSE  README.md  circuit.cxx  detailed.cxx  legalizer.cxx  lookup_table.cxx  main.cxx  optimization_subproblems.cxx  orientation.cxx  rough_legalizers.cxx  solvers.cxx  topologies.cxx  transportation.cxx
Coloquinte/: circuit.hxx  circuit_helper.hxx  common.hxx  detailed.hxx  legalizer.hxx  netlist.hxx  optimization_subproblems.hxx  ordered_single_row.hxx  rough_legalizers.hxx  solvers.hxx  topologies.hxx
cmake_modules/: FindColoquinte.cmake
gp/: anchoring.hxx  circuit.hxx  common.hxx  net_models.hxx  netlist.hxx  placement.hxx  rough_legalizers.hxx  solvers.hxx  transportation.hxx
src/: CMakeLists.txt  MCF_opt.cxx  cell_swapping.cxx  circuit.cxx  detailed.cxx  legalizer.cxx  lookup_table.cxx  main.cxx  optimization_subproblems.cxx  orientation.cxx  piecewise_linear.cxx  rough_legalizers.cxx  row_opt.cxx  solvers.cxx  topologies.cxx
src/coloquinte/: circuit.hxx  circuit_helper.hxx  common.hxx  detailed.hxx  netlist.hxx  optimization_subproblems.hxx  rough_legalizers.hxx  topologies.hxx
